# django-starter

./: .dockerignore  .env.example  .env.staging  .gitignore  Dockerfile  New.dockerfile  README.md  docker-compose.test.yml  manage.py  mypy.ini  package.json  pyproject.toml  requirements.txt  serve.sh  uno.config.js  vite.config.js
.ci/: .dockerignore  Dockerfile  Dockerfile.alpine  Dockerfile.old  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  entrypoint.prod.sh  entrypoint.test.sh  entrypoint.worker.sh
.ci/dev/: docker-compose.yml
.ci/prod/: docker-compose.yml
.ci/scripts/: stage.sh
.ci/staging/: docker-compose.yml
.ci/test/: docker-compose.yml  entrypoint.sh
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: test.yml
core/: context_processors.py  monkeypatch.py  tasks.py  tests.py  urls.py  views.py
core/components/: formcomponent.py  mycomponent.py
core/templates/: base.html  base_action.html  base_app.html  base_web.html  root.html
core/templates/django/forms/: div.html  label.html  p.html  table.html
core/templates/django/forms/errors/dict/: ul.html
core/templates/django/forms/errors/list/: ul.html
core/templates/django/forms/widgets/: multiwidget.html
core/templates/pages/: login.html  logout.html  root.html
core/templates/pages/accounts/: profile.html
core/templates/partials/: field.html  input.html
core/templates/unicorn/: formcomponent.html  mycomponent.html
core/templatetags/: core.py
mysite/: celery.py  logger.py  settings.py  urls.py
public_site/: urls.py
public_site/templates/pages/: login.html  logout.html  root.html
scripts/: test.sh
search/: views.py
static/src/: main.js
static_vite/: package-lock.json  package.json  uno.config.js  vite.config.js
static_vite/src/: main.js  theme.css  uno-build.js  uno-serve.js
templates/: base.html
vite/: package-lock.json  package.json  uno.config.js  vite.config.js
vite/src/: main.js  style.css  theme.css
