[tool.poetry]
name = "django-starter"
version = "0.1.0"
description = ""
authors = ["Lasse H. Bomholt <lasse@bomh.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = ">=4.2,<4.3"
wagtail = ">=5.1,<5.2"
django-vite = "^2.1.3"
gunicorn = "^21.2.0"
psycopg2 = "^2.9.7"
mypy = "^1.5.1"
django-stubs = "^4.2.3"
black = "^23.7.0"
ruff = "^0.0.286"

[tool.mypy]
enable_error_code = [
    "truthy-bool",
    "truthy-iterable",
    "redundant-expr",
    "unused-awaitable",
    "ignore-without-code",
    "possibly-undefined",
    "redundant-self",
]
allow_redefinition = false
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
explicit_package_bases = true
ignore_errors = false
ignore_missing_imports = true # comment for errors on missing types in libraries
implicit_reexport = false
local_partial_types = true
strict_concatenate = true
strict_equality = true
strict_optional = true
show_error_codes = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "mysite.settings"
strict_settings = true

[tool.black]
line-length = 200

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
