[tool.poetry]
name = "django-starter"
version = "0.1.0"
description = ""
authors = ["Lasse H. Bomholt <lasse@bomh.net>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = ">=4.2,<4.3"
wagtail = ">=5.1,<5.2"
django-vite = "^2.1.3"
gunicorn = "^21.2.0"
psycopg2 = "^2.9.7"
django-unicorn = "^0.54.0"
redis = "^5.0.0"
hiredis = "^2.2.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.7.0"
ruff = "^0.0.286"
django-stubs = "^4.2.3"
django-stubs-ext = "^4.2.2"

[tool.mypy]
enable_error_code = [
    "truthy-bool",
    "truthy-iterable",
    "redundant-expr",
    "unused-awaitable",
    "ignore-without-code",
    "possibly-undefined",
    "redundant-self",
]
allow_redefinition = false
check_untyped_defs = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
explicit_package_bases = true
ignore_errors = false
implicit_reexport = false
local_partial_types = true
strict_concatenate = true
strict_equality = true
strict_optional = true
show_error_codes = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
warn_return_any = true
disallow_any_decorated = true

disallow_subclassing_any = false
ignore_missing_imports = true # Ignore missing types from imports
disallow_any_expr = false # Ignore any expression, evaluated as any

plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "mysite.settings"
strict_settings = true

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
